[gd_scene load_steps=10 format=3 uid="uid://bj1xsavstda31"]

[ext_resource type="Texture2D" uid="uid://cp10xd58q4kyv" path="res://Assets/sprites/poo-boy-frame1.png" id="1_f50pn"]
[ext_resource type="Script" uid="uid://dish1kimthb8g" path="res://Scripts/player.gd" id="1_ij6vw"]
[ext_resource type="AudioStream" uid="uid://kuhbmfyt6osl" path="res://Assets/Audio/jump.wav" id="3_gbyq6"]
[ext_resource type="AudioStream" uid="uid://dhq3agpmumsp8" path="res://Assets/Audio/kill-poo-splat.wav" id="4_gbyq6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gbyq6"]
atlas = ExtResource("1_f50pn")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbq55"]
atlas = ExtResource("1_f50pn")
region = Rect2(200, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_44cfe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbyq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbq55")
}],
"loop": false,
"name": &"run",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gbyq6"]
radius = 18.0
height = 66.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbyq6"]
size = Vector2(55.5, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ij6vw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -49)
sprite_frames = SubResource("SpriteFrames_44cfe")
animation = &"run"
autoplay = "run"
frame_progress = 0.901158

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -37)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gbyq6")

[node name="death" type="Area2D" parent="."]

[node name="top" type="CollisionShape2D" parent="death"]
position = Vector2(0, -77)
shape = SubResource("RectangleShape2D_gbyq6")

[node name="right" type="CollisionShape2D" parent="death"]
position = Vector2(29, -49)
rotation = 1.5708
shape = SubResource("RectangleShape2D_gbyq6")

[node name="left" type="CollisionShape2D" parent="death"]
position = Vector2(-29, -49)
rotation = 1.5708
shape = SubResource("RectangleShape2D_gbyq6")

[node name="kill" type="Area2D" parent="."]

[node name="bot" type="CollisionShape2D" parent="kill"]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_gbyq6")

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gbyq6")

[node name="killSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gbyq6")

[connection signal="area_entered" from="death" to="." method="_on_death_area_entered"]
[connection signal="area_entered" from="kill" to="." method="_on_kill_area_entered"]
